[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/bar-3d/hp_bar_3d.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/units/sieges/ram/ram.gd" type="Script" id=2]
[ext_resource path="res://assets/flag/flag.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/other/wheel/wheel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/units/sieges/ram/ram_base.png" type="Texture" id=5]
[ext_resource path="res://assets/other/ram/ram_weapon.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/message-3d/message_3d.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/message-3d/message_3d.gd" type="Script" id=8]

[sub_resource type="SphereShape" id=1]
radius = 0.975245

[node name="ram" type="KinematicBody"]
script = ExtResource( 2 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.3453, 0 )

[node name="roof_1" type="Sprite3D" parent="pivot"]
transform = Transform( 2.39296, 0, 0, 0, 2.53753, -0.707107, 0, 2.53753, 0.707107, 0, 0, -0.595394 )
modulate = Color( 0.356863, 0.223529, 0, 1 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="roof_2" type="Sprite3D" parent="pivot"]
transform = Transform( 2.39296, 0, 0, 0, 2.53753, 0.707107, 0, -2.53753, 0.707107, 0, 0, 0.691662 )
modulate = Color( 0.356863, 0.223529, 0, 1 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="side_1" type="Sprite3D" parent="pivot"]
transform = Transform( 2.393, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.66249, 1.08471 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="side_2" type="Sprite3D" parent="pivot"]
transform = Transform( 2.393, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.66249, -0.970318 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="side_3" type="Sprite3D" parent="pivot"]
transform = Transform( -6.55671e-08, 0, 1, 0, 1, 0, -1.5, 0, -4.37114e-08, 1.63444, -0.750271, 0.0394468 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="side_4" type="Sprite3D" parent="pivot"]
transform = Transform( -6.55671e-08, 0, 1, 0, 1, 0, -1.5, 0, -4.37114e-08, -1.66018, -0.750271, 0.0394468 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="wheel_1" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.968586, -0.986078, -1.27739 )

[node name="wheel_4" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.968586, -0.986078, 1.354 )

[node name="wheel_2" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -1.00062, -0.986078, -1.27739 )

[node name="wheel_3" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -1.00062, -0.986078, 1.34599 )

[node name="ram" parent="pivot" instance=ExtResource( 6 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0.898297, -0.253725, 0 )

[node name="flag" parent="pivot" instance=ExtResource( 3 )]
transform = Transform( -0.8, 0, -1.50996e-07, 0, 0.8, 0, 1.20797e-07, 0, -1, -1.22791, -0.79214, -1.04564 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17575, -0.115328 )
shape = SubResource( 1 )

[node name="hpBar" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.352857, 0, 0, 0, 0.623045, 0, 0, 0, 1, 0, 2.21166, 0 )

[node name="owner" type="Sprite3D" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 3.09387, 0 )
billboard = 1
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween_dead" type="Tween" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = 20.0

[connection signal="tween_completed" from="Tween_dead" to="." method="_on_Tween_dead_tween_completed"]
